fixed double verticle scrollbar

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,6 @@ html, body{
   color: black;
   font-family: 'Poppins', sans-serif;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 /*header style */
